--- a/Hat/app/src/main/res/values/strings.xml
+++ b/Hat/app/src/main/res/values/strings.xml
@@ -31,4 +31,20 @@
     <string name="disconnect">disconnect</string>
     <string name="search_available_device">search available device</string>
     <string name="pop_up_search_box_for_destination_finding">pop up search box for destination finding</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 </resources>
